cargo-features = ["profile-rustflags"]

[package]
name = "rust-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"

[unstable]
profile-rustflags = true

[profile.dev]
rustflags = ["-C", "link-args=-Wl,-stack_size,8000000"]

[profile.release]
rustflags = ["-C", "link-args=-Wl,-stack_size,8000000"]

